<resources>
    <string name="app_name">VkLike</string>

    <string name="hello_world">VkLike status</string>
    <string name="action_settings">Settings</string>
    <string name="login_button_name">Войти</string>
    <string name="get_user_info_btn">Инфо пользователя</string>

    <string name="user_like_photo_btn">Фото</string>
    <string name="user_like_post_btn">Посты</string>

    <string name="delete_selected">Убрать</string>

    <integer name="com_vk_sdk_AppId">5078881</integer>
</resources>
