<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".VkLikeActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_name"
        android:id="@+id/loginBtn"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_like_photo_btn"
        android:id="@+id/getLikePhoto"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/loginBtn"
        android:layout_toEndOf="@+id/loginBtn" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/deleteSelected"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_selected"
        android:id="@+id/deleteSelected"
        android:layout_alignTop="@+id/getLikePostBtn"
        android:layout_toRightOf="@+id/getLikePostBtn"
        android:layout_toEndOf="@+id/getLikePostBtn" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_like_post_btn"
        android:id="@+id/getLikePostBtn"
        android:layout_alignBottom="@+id/getLikePhoto"
        android:layout_toRightOf="@+id/getLikePhoto"
        android:layout_toEndOf="@+id/getLikePhoto" />

</RelativeLayout>
